# Gamellito

./: README.md  iniciar_gamellito.sh  install_gamellito.sh  install_libs_qt.sh  install_libs_qt_dev.sh
0.Analises/C++/: AnalisesCPP.md
1.Roadmap/: README.md
1.Roadmap/Roadmap/: Roadmap.pro  mainwindow.cpp  mainwindow.ui  sobre.cpp  sobre.h
1.Roadmap/build-Roadmap-Desktop-Release/: moc_mainwindow.cpp  moc_sobre.cpp
2.PaginasDinamicas/PaginasDinamicas/: CMakeLists.txt  telanova.h  telanova.ui  telaoptativa.ui
2.PaginasDinamicas/build-PaginasDinamicas-QT5-Desktop-MinSizeRel/: Makefile
3.Menus/Menus-QT5/: mainwindow.cpp
3.Menus/build-Menus-QT5-Desktop-MinSizeRel/: CMakeCache.txt  Makefile
3.Menus/build-Menus-QT5-Desktop-Release/: CMakeCache.txt
4.ReprodutorMenu/ReprodutorMenu/: CMakeLists.txt  arquivos.cpp  arquivos.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  recursos.qrc  reprodutor.cpp  reprodutor.h  usuario.cpp  usuario.h  videographicsview.cpp  videographicsview.h  videoplayer.h
4.ReprodutorMenu/ReprodutorMenu/assets/: resources.qrc
4.ReprodutorMenu/build-ReprodutorMenu-Desktop-Debug/: CMakeCache.txt  Makefile  cmake_install.cmake
4.ReprodutorMenu/build-ReprodutorMenu-Desktop-MinSizeRel/: CMakeCache.txt  Makefile  cmake_install.cmake  qtcsettings.cmake
5.Modulados/Modulados/: CMakeLists.txt  arquivos.cpp  arquivos.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  perfil.cpp  perfil.h  questionario.cpp  questionario.h  questionario.ui  reprodutor.cpp  reprodutor.h  reprodutor.ui  senha.cpp  sequencia.cpp  sequencia.h  somambiente.cpp  somambiente.h  video.cpp  video.h  video.ui
6.Gamellito/: CMakeLists.txt  arquivos.cpp  arquivos.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  perfil.cpp  recursos.qrc  senha.cpp  sequencia.cpp  video.cpp
6.Gamellito/Gamellito/: CMakeLists.txt  arquivos.cpp  arquivos.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  recursos.qrc  reprodutor.cpp  reprodutor.h  reprodutor.ui  senha.h  video.cpp  video.h  video.ui
ConfiguracoesMaquina/: cpu.txt
ConfiguracoesMaquina/dmidecode/: bios.txt  cache.txt  configs.txt  memoria.txt  placa-mae.txt  processador.txt  sistema.txt
Instalacao/: gamellito.sh
Java/: AnalisesJava.md  VideoPlayer.java
Java/Exemplo/: VideoPlayer.java
Menus/Menus-QT5/: CMakeLists.txt  main.cpp  mainwindow.h  mainwindow.ui  recursos.qrc
Menus/build-Menus-QT5-Desktop-MinSizeRel/: Menus-QT5  cmake_install.cmake
Menus/build-Menus-QT5-Desktop-Release/: Makefile  cmake_install.cmake
PaginasDinamicas/: README.md
PaginasDinamicas/PaginasDinamicas/: mainwindow.cpp  mainwindow.h  mainwindow.ui  telanova.cpp  telaoptativa.cpp  telaoptativa.h
Python/: AnalisesPython.md  README.txt  mediaPlayer.py
Python/Exemplo/: mediaPlayer.py
Video/: exemplo480p.mkv
(+79 files in other folders)
